--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body>
 	<a-scene embedded arjs>
 		<a-marker-camera preset='hiro'>
-			<a-text value="Hello, World!"> </a-text>
+			<a-text 
+			value="Hello, World!" 
+			ratation="-90 0 0"
+			color="red"
+			></a-text>
 		</a-marker-camera>
 	</a-scene>
 
