--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 		<a-marker-camera preset='hiro'>
 			<a-text 
 			value="Hello, World!" 
-			ratation="-90 0 0"
-			color="red"
-			></a-text>
+			rotation="-90 0 0"
+			color="red"></a-text>
 		</a-marker-camera>
 	</a-scene>
 
